# rusty-php

./: .gitignore  Cargo.toml  Dockerfile  LICENCE.md  README.md
cli/: Cargo.toml  build.rs
cli/examples/php-java/: .gitignore  HelloWorld.java  composer.json  main.php
cli/src/: main.rs
cli/tests/: basic.rs
core/: Cargo.toml
core/src/: ffi.rs  lib.rs  result.rs  sapi.rs  streams.rs  test.rs  zend.rs
core/src/callback/: listeners.rs  mod.rs
core/src/ext/standard/: info.rs
core/src/zend/: array.rs  file.rs  llist.rs  mod.rs  string.rs
core/tests/: types.rs
http/: Cargo.toml
http/examples/: create-examples.sh  symfony.rs
http/src/: main.rs  pool.rs
src/: main.rs  sapi.rs  streams.rs  zend.rs
src/ext/: mod.rs
src/ext/standard/: info.rs
src/zend/: execute.rs  mod.rs  stream.rs
sys/: Cargo.toml  build.rs
sys/src/: lib.rs  sapi.rs  streams.rs  tsrm.rs  variables.rs
sys/src/ext/: mod.rs
sys/src/ext/standard/: info.rs  mod.rs
sys/src/zend/: compile.rs  execute.rs  mod.rs  stream.rs  string.rs
tests/: basic.rs
