[package]
name = "rusty-php-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
lazy_static = "1.4.0"
libc = "0.2.138"
map_in_place = "0.1.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

rusty-php = { path = "../core" }
rusty-php-sys = { path = "../sys" }

[features]
default = []

zts = ["rusty-php/zts", "rusty-php-sys/zts"]
