[package]
name = "rusty-php-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
crossbeam-channel = "0.5.6"
hyper = { version = "0.14.24", features = ["http1", "http2", "server"] }
tokio = { version = "1.25.0", features = ["macros", "net", "rt", "signal"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

rusty-php = { path = "../core" }
