[package]
name = "rusty-php-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.138"
nix = { version = "0.26.1", features = ["fs"] }
tracing = "0.1.37"

[features]
default = ["zend_enable_zval_long64"]
zend_enable_zval_long64 = []
